--- a/configs/products.yml
+++ b/configs/products.yml
@@ -3,3 +3,21 @@ app:
 http:
   mode: release
   port: 8080
+log:
+  filename: /tmp/products.log
+  maxSize: 500
+  maxBackups: 3
+  maxAge: 3
+  level: "debug"
+  stdout: false
+consul:
+  addr: consul:8500
+grpc:
+  port: 0
+jaeger:
+  serviceName: products
+  reporter:
+    localAgentHostPort: "jaeger-agent:6831"
+  sampler:
+    type: const
+    param: 1
